--- a/FlightDecoder/FlightDecoder.vcxproj.filters
+++ b/FlightDecoder/FlightDecoder.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="Message.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="msgList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="msgListNode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
