--- a/FlightDecoder/FlightDecoder.vcxproj.filters
+++ b/FlightDecoder/FlightDecoder.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="msgListNode.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ASCII.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
