--- a/FlightDecoder/FlightDecoder.vcxproj
+++ b/FlightDecoder/FlightDecoder.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="FlightDecoder.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ASCII.h" />
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="HTTP.h" />
     <ClInclude Include="Message.h" />
